[package]
name = "mio-websockets"
version = "0.1.0"
authors = ["Aaron Burrow <burrows.labs@gmail.com>"]

[dependencies]
http-muncher = "0.2.0"
sha1 = "0.1.1"
rustc-serialize = "0.3.15"
websocket = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio"
rev = "3537a6980ae718d40f53e422f7a88ec7bc50299e"
